--- a/Code-play-around.ipynb
+++ b/Code-play-around.ipynb
@@ -11293,12 +11293,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#"
+    "# Keras Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kernel shuts down any time the Keras model is run.  Have decided to forgo it."
    ]
   },
   {
